syntax = "proto3";

package media.v1alpha;

message Media {
  int32 id = 1;
  string name = 2;
  string url = 3;
}

message CreateMediaRequest {
  string name = 2;
  string url = 3;
}

message CreateMediaResponse {
  Media media = 1;
}

message UpdateMediaRequest {
  int32 id = 1;
  string name = 2;
  string url = 3;
}

message UpdateMediaResponse {
  Media media = 1;
}

message DeleteMediaRequest {
  int32 id = 1;
}

message DeleteMediaResponse {
  Media media = 1;
}

message ListMediasRequest {
  // The parent resource name, for example, "shelves/shelf1"
  string parent = 1;

  // The maximum number of items to return.
  int32 page_size = 2;

  // The next_page_token value returned from a previous List request, if any.
  string page_token = 3;
}

message ListMediasResponse {
  // The field name should match the noun "Media" in the method name.
  // There will be a maximum number of items returned based on the page_size field in the request.
  repeated Media medias = 1;

  // Token to retrieve the next page of results, or empty if there are no more results in the list.
  string next_page_token = 2;
}

message GetMediaRequest {
  int32 id = 1;
}

message GetMediaResponse {
  Media media = 1;
}